# symbolizer

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml
cmake/: FindCli11.cmake  FindFmt.cmake
symbolizer/: CMakeLists.txt
symbolizer/include/: constants.hpp.in  symbolizer.hpp
symbolizer/python/: CMakeLists.txt
symbolizer/python/src/: symbolizer.cc
symbolizer/python/symbolizer/: __init__.py
symbolizer/src/: symbolizer.cpp
